--- a/css.css
+++ b/css.css
@@ -70,6 +70,12 @@ h1 {
 .username {
 	color: #bef;
 }
+.comment.comment-mention {
+	color: #ffcccc;
+}
+.comment.comment-mention .user .username {
+	color: #ff9999;
+}
 .when {
 	color: #8b8685;
 	font-size: 0.8em; margin-right: 32px;
@@ -167,9 +173,12 @@ a {
 	width: 24px; height: 24px; vertical-align: middle;
 	cursor: pointer;
 }
-.refresh-button.dim,
-.icon.dim, .right.dim,
+.right.dim,
 .add-comment.dim {
+	opacity: 0.5;
+}
+.refresh-button.dim,
+.icon.dim {
 	opacity: 0.3;
 }
 
