--- a/css.css
+++ b/css.css
@@ -54,10 +54,6 @@ h1 {
 	position: absolute;
 	top: 0; left: 0;
 }
-.image {
-	width: 306px;
-	height: 306px;
-}
 .image img {
 	width: 100%;
 	height: 100%;
@@ -89,9 +85,26 @@ h1 {
 	vertical-align: middle;
 	margin-left: 6px;
 }
+.image {
+	width: 306px; height: 306px;
+}
 .picture.zoomed .image {
 	width: 612px; height: 612px;
 }
+/*
+ * HW ACCEL DIDNT WORK OUT
+.image {
+	width: 612px; height: 612px;
+	-moz-transform: scale(0.5);
+	-moz-transform-origin: top left;
+	-webkit-transform: scale(0.5);
+	-webkit-transform-origin: top left;
+}
+.picture.zoomed .image {
+	-moz-transform: scale(1);
+	-webkit-transform: scale(1);
+}
+*/
 .picture.zoomed .right {
 	padding-top: 628px;
 	padding-bottom: 16px;
@@ -110,6 +123,11 @@ h1 {
 .image {
 	-moz-transition: 0.5s width, 0.5s height;
 	-webkit-transition: 0.5s width, 0.5s height;
+	/*
+	 * HW ACCEL DIDNT WORK OUT
+	-moz-transition: 0.5s -moz-transform;
+	-webkit-transition: 0.5s -webkit-transform;
+	*/
 }
 .right {
 	-moz-transition: 0.5s padding-top, 0.5s padding-bottom;
