--- a/css.css
+++ b/css.css
@@ -147,7 +147,7 @@ img.hide, img.show, img.dim {
 	-webkit-transition: 0.5s opacity;
 }
 a {
-	color: #e9e8e7;
+	color: inherit;
 	text-decoration: none;
 }
 
